Fixed scroll into view for selected item
Use vi-scroller for more appealing scrollbars

--- a/wwwroot/web-components/select/select.scss
+++ b/wwwroot/web-components/select/select.scss
@@ -61,13 +61,8 @@ $border-color: #ddd;
             }
         }
 
-        iron-list {
-            min-height: calc(var(--theme-h2) - 2px);
-        }
-
         [content] {
             max-height: calc(var(--theme-h2) * 10);
-            overflow-y: auto;
             padding: 0;
             margin: 0;
             list-style: none;
